--- a/media.css
+++ b/media.css
@@ -170,6 +170,10 @@ p {
   .calCon {
     grid-template-columns: 360px;
   }
+
+  .bookNowHolder {
+    grid-template-columns: 170px 170px;
+  }
 }
 
 @media only screen and (max-width: 414px) {
