--- a/media.css
+++ b/media.css
@@ -123,6 +123,9 @@ p {
   .calCon {
     grid-template-columns: 400px;
   }
+  .servicesCon {
+    grid-template-columns: 250px 250px;
+  }
 }
 
 @media only screen and (max-width: 430px) {
