--- a/media.css
+++ b/media.css
@@ -129,6 +129,10 @@ p {
 }
 
 @media only screen and (max-width: 430px) {
+  .alertCon {
+    grid-template-columns: 320px;
+    grid-template-rows: 90px;
+  }
   .about1 {
     grid-template-rows: 485px;
     gap: 40px;
@@ -155,8 +159,8 @@ p {
     font-size: 19px;
   }
   .heroMG h2 {
-    margin-top: 330px;
-    font-size: 42px;
+    margin-top: 350px;
+    font-size: 60px;
   }
 
   .content h2 {
@@ -180,6 +184,11 @@ p {
 }
 
 @media only screen and (max-width: 414px) {
+  .heroMG h2 {
+    /* margin-top: 45px; */
+    margin-top: 135px;
+    font-size: 55px;
+  }
   p {
     font-size: 13px !important;
   }
@@ -195,11 +204,7 @@ p {
     font-size: 30px !important;
     text-align: left !important;
   }
-  .heroMG h2 {
-    /* margin-top: 45px; */
-    margin-top: 125px;
-    font-size: 35px;
-  }
+
   .hero {
     /* height: 150px; */
     height: 250px;
@@ -265,9 +270,9 @@ p {
     grid-template-rows: auto;
   }
 
-  .alertCon {
+  /* .alertCon {
     grid-template-columns: 320px;
-  }
+  } */
 
   .calCon {
     grid-template-columns: 350px;
