--- a/style.css
+++ b/style.css
@@ -382,7 +382,7 @@ footer {
 .alertCon {
   display: grid;
   grid-template-columns: 350px;
-  grid-template-rows: 110px;
+  grid-template-rows: 130px;
   justify-content: center;
   margin-top: 40px;
   margin-bottom: 80px;
@@ -530,4 +530,13 @@ footer {
 
 .bookNowFooter {
   margin-top: 80px;
+}
+
+#seasonPromotion {
+  font-family: "Courier Prime", monospace !important;
+  color: #ce38dc;
+}
+
+.calHeading {
+  margin-top: 50px;
 }
