--- a/style.css
+++ b/style.css
@@ -534,7 +534,7 @@ footer {
 
 #seasonPromotion {
   font-family: "Courier Prime", monospace !important;
-  color: #ce38dc;
+  color: #a700b6;
 }
 
 .calHeading {
